  * Remove FSSTND from binary package, although retain it in the source
    package for the time being
  * Get the version.ent non-compression thingy right this time!
  * Also install FHS stuff byhand (as requested by webmasters)
  * Corrected GPL name and location         closes: Bug#88788, #93047
  * Correct bug severities                          closes: Bug#91276

 --

debian-policy (3.5.2.0) unstable; urgency=low

  * Add XFree86 app-defaults ammendment             closes: Bug#83069

 -- Julian Gilbey <jdg@debian.org>  Sun, 18 Feb 2001 14:11:49 +0000

debian-policy (3.5.1.0) unstable; urgency=low

  * Removed deprecated virtual package names        closes: Bug#84641
  * Changed rmdir postrm example (suggestion on -policy list)
  * Removed Richard Braakman from list of maintainers at his request
  * Corrected typos and grammatical errors found by Sean Perry
                            closes: Bug#85501, #85504, #85505, #85506
                            closes: Bug#85508, #85510, #85511, #85514
                            closes: Bug#84631, #84636, #85497, #85982
                            closes: Bug#85986, #85993, #86001
  * No longer include the old proposal document     closes: Bug#84079
  * Update footnote about dpkg-shlibdeps now that it uses objdump; bump up
    minor version number for this
  * Updated dpkg-shlibdeps example to use up-to-date package names (and
    correct dpkg-shlibdeps command line syntax)
  * Clarify error conditions for package installation
                                       (Bug#61801 from packaging-manual)
  * Add the "main" section of each distribution (got left out by
    accident!)                 (Bug#64304, #75955 from packaging-manual)
  * Clean version numbering string     (Bug#73064 from packaging-manual)
  * Install HTML version of FHS                     closes: Bug#83487
  * Removed bashism from debian/rules

 -- Julian Gilbey <jdg@debian.org>  Thu, 15 Feb 2001 12:13:00 +0000
