@@ -85,7 +85,7 @@
 	  <tt>/usr/doc/copyright/GPL</tt> in the Debian GNU/Linux
 	  distribution or on the World Wide Web at 
 	  <url id="http://www.gnu.org/copyleft/gpl.html"
-	  name="The GNU Public Licence">. You can also obtain it by writing to the
+	  name="The GNU General Public Licence">. You can also obtain it by writing to the
 	  Free Software Foundation, Inc., 59 Temple Place - Suite 330,
 	  Boston, MA 02111-1307, USA.
 	</p>
