@@ -205,7 +205,7 @@
 	  The current version of this document is always accessible
 	  from the Debian FTP server <ftpsite>ftp.debian.org</ftpsite>
 	  as
-	  <ftppath>/debian/doc/package-developer/policy.text.gz</ftppath>
+	  <ftppath>/debian/doc/package-developer/policy.txt.gz</ftppath>
 	  (also available from the same directory are several other
 	  formats: <tt>policy.html.tar.gz</tt>, <tt>policy.pdf.gz</tt>
 	  and <tt>policy.ps.gz</tt>) or from the <url
@@ -963,7 +963,7 @@
 	    The latest version of the authoritative list of virtual
 	    package names can be found on
 	    <ftpsite>ftp.debian.org</ftpsite> in
-	    <ftppath>/debian/doc/package-developer/virtual-package-names-list.text</ftppath>
+	    <ftppath>/debian/doc/package-developer/virtual-package-names-list.txt</ftppath>
 	    or your local mirror. In addition, it is included in the
 	    <tt>debian-policy</tt> package. The procedure for updating
 	    the list is described at the top of the file.</p></sect1>
@@ -4745,7 +4745,7 @@
 	<p>
           Menu entries should follow the current menu policy as
           defined in the file <ftpsite>ftp.debian.org</ftpsite> in
-          <ftppath>/debian/doc/package-developer/menu-policy.text.gz</ftppath>
+          <ftppath>/debian/doc/package-developer/menu-policy.txt.gz</ftppath>
           or your local mirror. In addition, it is included in the
 	  <tt>debian-policy</tt> package.
 	</p>
@@ -4781,7 +4781,7 @@
 	  compose, edit or print MIME types should register themselves
 	  as such following the current MIME support policy as defined
 	  in the file found on <ftpsite>ftp.debian.org</ftpsite> in
-	  <ftppath>/debian/doc/package-developer/mime-policy.text.gz</ftppath>
+	  <ftppath>/debian/doc/package-developer/mime-policy.txt.gz</ftppath>
 	  or your local mirror. In addition, it is included in the
 	  <tt>debian-policy</tt> package.
 	</p>
